--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -21,7 +21,7 @@ right quote	&#147;
 		description="Shareaza Lithuanian Skin File"
 		link="http://www.shareaza.com/"
 		email="rrol2002(at)hotmail.com"
-		version="2.1.0.70"
+		version="2.1.0.87"
 		type="Language"
 		language="lt"
 		prompt="Paspauskite čia, jei Jūsų gimtoji kalba lietuvių."
@@ -3302,7 +3302,7 @@ right quote	&#147;
 		<control caption="Parsisiųsti..."/>
 	</dialog>
 
-	<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuBuBuEdBuBuEdBuBuStEd" caption="BitTorrent">
+	<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuStEdmsBuBuBuEdBuBuEdBuStEdSt" caption="BitTorrent">
 		<control caption="_Sąsaja:"/>
 		<control caption="Rodyti papildomus BitTorrent sąsajos elementus"/>
 		<control caption="_Atsisiuntimų susijungimai:"/>
@@ -3310,15 +3310,17 @@ right quote	&#147;
 		<control caption="Torrent bylų per kartą"/>
 		<control/><control/>
 		<control caption="Klientų susijungimų"/>
+		<control caption=" Valyti parsisiųstus torrent"/>
+		<control caption="Kai bendrinimo santykis pasiekia"/>
+		<control/><control/>
 		<control caption="_EndGame (paspartinimas):"/>
 		<control caption="Įgalinti BitTorrent „EndGame“ veikseną baigiant siųstis bylas"/>
 		<control caption="_Laikyti torrent bylas čia:"/>
 		<control/><control/>
 		<control caption="_Torrent bylų kūrimo programa"/>
 		<control/><control/>
-		<control caption="_Numatytasis seklys:"/>
-		<control caption="Seklys:"/>
-		<control/>
+		<control caption="Numatytasis seklys: "/>
+		<control/><control/>
 	</dialog>
 
 	<dialog name="CProtocolsSettingsPage" cookie="BuSy" caption="Protokolai">
