--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -21,7 +21,7 @@ right quote	&#147;
 		description="Shareaza Lithuanian Skin File"
 		link="http://www.shareaza.com/"
 		email="rrol2002(at)hotmail.com"
-		version="2.1.0.87"
+		version="2.1.0.94"
 		type="Language"
 		language="lt"
 		prompt="Paspauskite čia, jei Jūsų gimtoji kalba lietuvių."
@@ -3103,12 +3103,15 @@ right quote	&#147;
 		<control/>
 	</dialog>
 
-	<dialog name="CCommunitySettingsPage" cookie="BuStBuBuBu" caption="Bendrija">
+	<dialog name="CCommunitySettingsPage" cookie="BuStBuBuBuBuBuBu" caption="Bendrija">
 		<control caption="Mano _profilis:"/>
 		<control caption="Jūs galite naudoti savo Gnutella vartotojo profilį dalinantis su kitais informacija apie save, savo interesus ir rekomenduotinas bylas bei tinklalapius."/>
 		<control caption="Taisyti profilį"/>
 		<control caption="Po_kalbiai:"/>
 		<control caption="Įgalinti lygiaverčio tarptinklinio ryšio pakalbius su suderinamais klientais"/>
+		<control caption="Įgalinti pokalbius visuose tinkluose"/>
+		<control caption="Filtruoti pokalbio tekstus nuo infrormacinių šiukšlių"/>
+		<control caption="Filtruoti nešvankybes pokalbiuose"/>
 	</dialog>
 
 	<dialog name="CWebSettingsPage" cookie="BuStBuBuBuBuBuBuBuCoBuBuSt" caption="Žiniatinklis">
