--- a/trunk/Languages/default-lt.xml
+++ b/trunk/Languages/default-lt.xml
@@ -21,7 +21,7 @@ right quote	&#147;
 		description="Shareaza Lithuanian Skin File"
 		link="http://www.shareaza.com/"
 		email="rrol2002(at)hotmail.com"
-		version="2.1.0.94"
+		version="2.1.0.97"
 		type="Language"
 		language="lt"
 		prompt="Paspauskite čia, jei Jūsų gimtoji kalba lietuvių."
@@ -4006,7 +4006,7 @@ right quote	&#147;
 		<control caption="_Atnaujinti"/>
 		<control/>
 		<control caption="Užverti"/>
-		<control caption="Kada reikia|Kai santykis virš 100%|Niekada"/>
+		<control caption="Kada reikia|Kai santykis virš 100%|Tik kai prašoma|Niekada"/>
 		<control caption="Pradėti naujus siuntimus:"/>
 		<control caption="Siuntimai:"/>
 	</dialog>
