--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -2924,7 +2924,7 @@
 	<string id="17484" value="Ошибка разбирая ответ BitTorrent трекера."/>
 	<string id="17485" value="Получен ответ BitTorrent трекера для файла «%s», %i новых источников."/>
 	<string id="17486" value="Инициализация соединения с BitTorrent партнером %s..."/>
-	<string id="17487" value="Установлено соединение с BitTorrent партнером %s, подтвердается связь..."/>
+	<string id="17487" value="Установлено соединение с BitTorrent партнером %s, подтверждается связь..."/>
 	<string id="17488" value="Вы изменили адрес ссылки (URL) трекера у этого торрента.  Уверены, что хотите это сохранить?\n\nНеправильный URL трекера может предотвратить дальнейшую загрузку."/>
 	<string id="17489" value="Создана BitTorrent пара с %s, используя расширенный протокол, идентифицировано «%s»."/>
 	<string id="17490" value="Получено %i новых BitTorrent источников c %s."/>
